# theater-troupe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  database.py
database/migrations/: .gitkeep  README.md
docs/: API.md  EXPORT.md
reports/: .gitkeep
sql/: database_structure.sql
src/: __init__.py  export_to_pdf.py  export_to_xlsx.py  main.py
src/api/: __init__.py  reports.py
src/database/: __init__.py  connection.py  queries.py
src/models/: __init__.py  actor.py  author.py  director.py  location.py  performance.py  play.py  production.py  rehearsal.py  role.py  theatre.py
src/utils/: __init__.py  export_manager.py  reports.py  theme.py  validators.py
